--- a/breathe.html
+++ b/breathe.html
@@ -1,139 +1,121 @@
-<script>
-  fetch('sidebar.html')
-  .then(response => response.text())
-  .then(data => document.getElementById('sidebar-div').innerHTML = data);
-  fetch('header.html')
-  .then(response => response.text())
-  .then(data => document.getElementById('header-div').innerHTML = data);
-</script>
-
 <!DOCTYPE html>
 <html lang="en">
-<div id="header-div"></div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Example</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
+        .column {
+            float: left;
+            width: 100%;
+            padding: 7px;
+        }
 
+        .column img {
+            width: 100%;
+            height: auto; /* This ensures the aspect ratio is maintained */
+            display: block;
+            cursor: zoom-in;
+        }
 
+        /* Clearfix (clear floats) */
+        .row::after {
+            content: "";
+            clear: both;
+            display: table;
+        }
+    </style>
+</head>
 <body>
-  <div id="sidebar-div"></div>
+    <div id="header-div"></div>
+    <div id="sidebar-div"></div>
 
-  <main id="main">
+    <main id="main">
+        <!-- ======= Breadcrumbs ======= -->
+        <section id="breadcrumbs" class="breadcrumbs">
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h2>breathe</h2>
+                    <ol>
+                        <li><a href="index.html">Home</a></li>
+                        <li>breathe</li>
+                    </ol>
+                </div>
+            </div>
+        </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>breathe</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>breathe</li>
-          </ol>
+        <!-- ======= Portfolio Details Section ======= -->
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <img src="photos/breathe/breathe-1.jpg" alt="Breathe 1" loading="lazy">
+                </div>
+                <div class="column">
+                    <img src="photos/breathe/breathe-2.jpg" alt="Breathe 2" loading="lazy">
+                </div>
+                <div class="column">
+                    <img src="photos/breathe/breathe-3.jpg" alt="Breathe 3" loading="lazy">
+                </div>
+                <div class="column">
+                    <img src="photos/breathe/breathe-4.jpg" alt="Breathe 4" loading="lazy">
+                </div>
+                <div class="column">
+                    <img src="photos/breathe/breathe-5.jpg" alt="Breathe 5" loading="lazy">
+                </div>
+                <div class="column">
+                    <img src="photos/breathe/breathe-6.jpg" alt="Breathe 6" loading="lazy">
+                </div>
+                <div class="column">
+                    <img src="photos/breathe/breathe-7.jpg" alt="Breathe 7" loading="lazy">
+                </div>
+                <div class="column">
+                    <img src="photos/breathe/breathe-8.jpg" alt="Breathe 8" loading="lazy">
+                </div>
+            </div>
         </div>
+        <!-- End Portfolio Details Section -->
+    </main><!-- End #main -->
 
-      </div>
-    </section><!-- End Breadcrumbs -->
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+        <div class="container">
+            <div class="copyright">
+            </div>
+            <div class="credits">
+            </div>
+        </div>
+    </footer><!-- End Footer -->
 
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-<style>
-* {
-  box-sizing: border-box;
-}
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="assets/vendor/counterup/counterup.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="assets/vendor/typed.js/typed.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
 
-.column {
-  float: left;
-  width: 100%;
-  padding: 7px;
-}
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-</style>
-
-    <!-- ======= Portfolio Details Section ======= -->
-<div class="container">
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-1.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-</div>
-  <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-6.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-
-  <div class="column">
-
-    <img data-enlargable width="100" src="photos/breathe/breathe-7.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-
-  </div>
-
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-8.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-
-</div>
-
-<br>
-
-
-</div>
-
-</div>
-    <!-- End Portfolio Details Section -->
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-      </div>
-      <div class="credits">
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
-
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/counterup/counterup.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
+    <script>
+        fetch('sidebar.html')
+        .then(response => response.text())
+        .then(data => document.getElementById('sidebar-div').innerHTML = data);
+        fetch('header.html')
+        .then(response => response.text())
+        .then(data => document.getElementById('header-div').innerHTML = data);
+    </script>
 </body>
-
 </html>
