--- a/moving.html
+++ b/moving.html
@@ -1,24 +1,48 @@
-<script>
-  fetch('sidebar.html')
-  .then(response => response.text())
-  .then(data => document.getElementById('sidebar-div').innerHTML = data);
-  fetch('header.html')
-  .then(response => response.text())
-  .then(data => document.getElementById('header-div').innerHTML = data);
-</script>
-
 <!DOCTYPE html>
 <html lang="en">
-<div id="header-div"></div>
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Example</title>
+    <link rel="stylesheet" href="styles.css">
+    <script>
+      fetch('sidebar.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('sidebar-div').innerHTML = data);
+      fetch('header.html')
+      .then(response => response.text())
+      .then(data => document.getElementById('header-div').innerHTML = data);
+    </script>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      .column {
+        float: left;
+        width: 100%;
+        padding: 7px;
+      }
+      .column img {
+        width: 100%;
+        height: auto; /* This ensures the aspect ratio is maintained */
+        display: block;
+        cursor: zoom-in;
+      }
+      /* Clearfix (clear floats) */
+      .row::after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+    </style>
+</head>
 <body>
+  <div id="header-div"></div>
   <div id="sidebar-div"></div>
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
           <h2>moving</h2>
           <ol>
@@ -26,66 +50,28 @@
             <li>moving</li>
           </ol>
         </div>
-
       </div>
     </section><!-- End Breadcrumbs -->
 
-
-<style>
-* {
-  box-sizing: border-box;
-}
-
-.column {
-  float: left;
-  width: 100%;
-  padding: 7px;
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-</style>
-
- <div class="container">
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-  <div class="column">
-
-    <img data-enlargable width="100" src="photos/moving/moving-1.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/moving/moving-2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/moving/moving-3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/moving/moving-4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/moving/moving-5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-</div>
-
-<br>
-
-
-</div>
-
-</div>
-    <!-- End Portfolio Details Section -->
+    <div class="container">
+      <div class="row">
+        <div class="column">
+          <img src="photos/moving/moving-1.jpg" alt="Moving 1" loading="lazy">
+        </div>
+        <div class="column">
+          <img src="photos/moving/moving-2.jpg" alt="Moving 2" loading="lazy">
+        </div>
+        <div class="column">
+          <img src="photos/moving/moving-3.jpg" alt="Moving 3" loading="lazy">
+        </div>
+        <div class="column">
+          <img src="photos/moving/moving-4.jpg" alt="Moving 4" loading="lazy">
+        </div>
+        <div class="column">
+          <img src="photos/moving/moving-5.jpg" alt="Moving 5" loading="lazy">
+        </div>
+      </div>
+    </div>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -96,7 +82,7 @@
       <div class="credits">
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
@@ -115,7 +101,5 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
