--- a/index.html
+++ b/index.html
@@ -75,8 +75,16 @@
       <div class="container">
         <div class="section-title">
           <h2>Resources</h2>
-          <p>Here are some resources I guess?
+          <p>
+            An assortment of potentially helpful documents and links.
           </p>
+          <!-- Include link to jax_jit.pdf -->
+          <div class="row">
+            <div class="col-lg-6">
+              <ul>
+                <li><a href="jax_jit.pdf">Jax and JIT basics</a></li>
+              </ul>
+            </div>
         </div>
     </section><!-- End Resources Section -->
 <br>
