--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
-<head>
-  <meta name="google-site-verification" content="ChRuE9kxN8h-jFqqFJUeUyNxoCxO5IHx7iS9yaXGdZ4" />
-</head>
-
-<script>
-  fetch('sidebar.html')
-  .then(response => response.text())
-  .then(data => document.getElementById('sidebar-div').innerHTML = data);
-  fetch('header.html')
-  .then(response => response.text())
-  .then(data => document.getElementById('header-div').innerHTML = data);
-</script>
-
 <!DOCTYPE html>
 <html lang="en">
-<div id="header-div"></div>
-
+<head>
+  <meta name="google-site-verification" content="ChRuE9kxN8h-jFqqFJUeUyNxoCxO5IHx7iS9yaXGdZ4" />
+  <script>
+    fetch('sidebar.html')
+    .then(response => response.text())
+    .then(data => document.getElementById('sidebar-div').innerHTML = data);
+    fetch('header.html')
+    .then(response => response.text())
+    .then(data => document.getElementById('header-div').innerHTML = data);
+  </script>
+</head>
 <body>
+  <div id="header-div"></div>
   <div id="sidebar-div"></div>
   <main id="main">
     <!-- ======= Breadcrumbs ======= -->
@@ -35,12 +32,12 @@
       <div class="container">
         <div class="section-title">
           <h2>Richard Chen</h2>
-          <p>Hello! I am a first year PhD Student at the <a href="https://harris.uchicago.edu/academics/degrees/phd">University of Chicago, Harris School of Public Policy</a>.
+          <p>Hello! I am a second year PhD Student at the <a href="https://harris.uchicago.edu/academics/degrees/phd">University of Chicago, Harris School of Public Policy</a>.
             My research interests are:</p>
             <ul>
               <li>Industrial Organization</li>
-              <li>Energy and Environmental Economics</li>
               <li>Agricultural Economics</li>
+              <li>Energy and Environmental Economics</li>
             </ul>
             I also like auctions.
             <br>
@@ -84,21 +81,19 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><a href="jax_jit.pdf" download>Jax and JIT basics</a></li>              </ul>
+                <li><a href="jax_jit.html" target="_blank">Jax and JIT basics</a></li>
+              </ul>
+              <ul>
+                <li><a href="optimization_cookbook.html" target="_blank">Optimization Cookbook</a></li>
+              </ul>
             </div>
+          </div>
         </div>
-    </section><!-- End Resources Section -->
-<br>
-
-
-</div>
-
-</div>
-    <!-- End Portfolio Details Section -->
-  </main><!-- End #main -->
-
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
-
+      </div>
+    </div>
+  </section><!-- End Resources Section -->
+  <br>
+</main><!-- End #main -->
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
