--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><a href="jax_jit.html" target="_blank">Jax and JIT basics</a></li>
+                <li><a href="jax_jit.html">Jax and JIT basics</a></li>
               </ul>
               <ul>
-                <li><a href="optimization_cookbook.html" target="_blank">Optimization Cookbook</a></li>
+                <li><a href="optimization_cookbook.html">Optimization Cookbook</a></li>
               </ul>
             </div>
           </div>
